--- a/main.html
+++ b/main.html
@@ -4,10 +4,53 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Car Insurance form</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header>
+		<h1>Car Insurance Form</h1>
+	</header>
+
+	<main>
+		<form action="formdata.html" method="post">
+			<label for="name">Name:</label>
+			<input type="text" id="name"> 
+			<br>
+			<label for="email">Email:</label>
+			<input type="email" id="email"> 
+			<br>
+			<label for="gender">Gender:</label><br>
+			<input type="radio" name="gender" id="gender" value="male">
+			<label for="male">Male</label>
+			<input type="radio" name="gender" id="gender" value="female">
+			<label for="female">Female</label>
+			<br>
+			<label for="carBrand">Car Brands:</label><br>
+			<input type="checkbox" id="cars" name="BMW">
+			<label for="carBMW">BMW</label>
+			<input type="checkbox" id="cars" name="Audi">
+			<label for="carAudi">Audi</label>
+			<input type="checkbox" id="cars" name="Mercedez">
+			<label for="carMercedez">Mercedez</label>
+			<br>
+			<label for="carage">Car Age:</label>
+			<input type="number" id="carage"><span>Years</span>
+			<br>
+			<label for="dop">Date of Purchase:</label>
+			<input type="date" id="dop">
+			<br>
+			<label for="password">Password:</label>
+			<input type="password" id="password">
+			<br>
+			<input type="submit">
+		</form>
+	</main>
+
+	<footer>
+
+	</footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
