--- a/main.html
+++ b/main.html
@@ -16,13 +16,13 @@
 	<main>
 		<form action="formdata.html" method="post">
 			<label for="name">Name:</label>
-			<input type="text" id="name"> 
+			<input type="text" id="name" required> 
 			<br>
 			<label for="email">Email:</label>
 			<input type="email" id="email"> 
 			<br>
 			<label for="gender">Gender:</label><br>
-			<input type="radio" name="gender" id="gender" value="male">
+			<input type="radio" name="gender" id="gender" value="male" required>
 			<label for="male">Male</label>
 			<input type="radio" name="gender" id="gender" value="female">
 			<label for="female">Female</label>
@@ -36,15 +36,15 @@
 			<label for="carMercedez">Mercedez</label>
 			<br>
 			<label for="carage">Car Age:</label>
-			<input type="number" id="carage"><span>Years</span>
+			<input type="number" id="carage" required><span>Years</span>
 			<br>
 			<label for="dop">Date of Purchase:</label>
-			<input type="date" id="dop">
+			<input type="date" id="dop" required>
 			<br>
 			<label for="password">Password:</label>
-			<input type="password" id="password">
+			<input type="password" id="password" required>
 			<br>
-			<input type="submit">
+			<button type="submit">Submit</button>
 		</form>
 	</main>
 
