--- a/main.html
+++ b/main.html
@@ -27,12 +27,12 @@
 			<input type="radio" name="gender" id="gender" value="female">
 			<label for="female">Female</label>
 			<br>
-			<label for="carBrand">Car Brands:</label><br>
-			<input type="checkbox" id="cars" name="BMW">
+			<label for="carBrand">Select Car/s:</label><br>
+			<input type="checkbox" id="selectcars" name="BMW">
 			<label for="carBMW">BMW</label>
-			<input type="checkbox" id="cars" name="Audi">
+			<input type="checkbox" id="selectcars" name="Audi">
 			<label for="carAudi">Audi</label>
-			<input type="checkbox" id="cars" name="Mercedez">
+			<input type="checkbox" id="selectcars" name="Mercedez">
 			<label for="carMercedez">Mercedez</label>
 			<br>
 			<label for="carage">Car Age:</label>
