--- a/main.html
+++ b/main.html
@@ -27,13 +27,13 @@
 			<input type="radio" name="gender" id="gender" value="female">
 			<label for="female">Female</label>
 			<br><br>
-			<label for="carBrand">Select Car/s:</label><br>
-			<input type="radio" name="selectCar" id="cars" value="BMW" required>
-			<label for="BMW">BMW</label><br>
-			<input type="radio" name="selectCar" id="cars" value="Audi">
-			<label for="Audi">Audi</label><br>
-			<input type="radio" name="selectCar" id="cars" value="Mercedez">
-			<label for="Mercedez">Mercedez</label>
+			<label for="cars">Car</label>
+			<select name="cars" id="cars" required>
+			<option>BMW</option>
+			<option>Audi</option>
+			<option>Mercedez</option>
+			</select>
+
 			<!-- <input type="checkbox" id="selectcars" name="BMW">
 			<label for="carBMW">BMW</label>
 			<input type="checkbox" id="selectcars" name="Audi">
